--- a/LELA70331_Coursework.ipynb
+++ b/LELA70331_Coursework.ipynb
@@ -131,6 +131,9 @@
     "from nn_tools import Vocabulary, IntentVectorizer, IntentDataset, IntentClassifier\n",
     "from nn_tools2 import *\n",
     "from sklearn.metrics import confusion_matrix\n",
+    "import nltk\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
     "\n"
    ]
   },
@@ -546,6 +549,129 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing\n",
+    "The utterances in our data (training, validation and test) are represented as sequences of whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we make changes to the data we should create a backup of the unaltered file in case we need to revert to it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp /content/gdrive/My\\ Drive/Intent_Classification/intent_classification_with_splits.csv ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we need to revert to the original unaltered file, we can then run the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp intent_classification_with_splits.csv /content/gdrive/My\\ Drive/Intent_Classification/\n",
+    "intent_data=pd.read_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The preprocessing steps that we are going to apply will be specified in a function called preprocess_utterance.\n",
+    "\n",
+    "If you want to apply the Porter Stemmer, you should run the following code cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "porter = nltk.PorterStemmer()\n",
+    "def preprocess_utterance(utt):\n",
+    "  utterance = nltk.word_tokenize(utt)\n",
+    "  newutt = \"\"\n",
+    "  for t in utterance:\n",
+    "    newutt = newutt + porter.stem(t) + \" \"\n",
+    "  return newutt.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to apply the WordNetLemmatizer you should instead run the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wnl = nltk.WordNetLemmatizer()\n",
+    "def preprocess_utterance(utt):\n",
+    "  utterance = nltk.word_tokenize(utt)\n",
+    "  newutt = \"\"\n",
+    "  for t in utterance:\n",
+    "    newutt = newutt + wnl.lemmatize(t) + \" \"\n",
+    "  return newutt.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can check that your preprocessing is doing what you want by testing them on examples using the following cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = input(\"Enter a utterance to test your preprocessing on: \")\n",
+    "print(preprocess_utterance(test_input))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you are happy with your preprocessing you can then transform the text in the training, validation and test data using the following cell. This alters the data on the disk so if you want to undo any changes later you will have to revert to the original data (as described above).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intent_data['text'] = [preprocess_utterance(item) for item in intent_data['text']]\n",
+    "intent_data.to_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "pkTtqltm6Ctc"
    },
@@ -593,6 +719,38 @@
     "print(\"{} -> {} (p={:0.2f})\".format(new_utterance,\n",
     "                                    prediction['intent'],\n",
     "                                    prediction['probability']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate performance on validation data\n",
+    "In order to evaluate the performance of your system while you tweak your preprocessing you can evaluate performance on the validation data, and look at a confusion matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'torch' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-99082b5ddc24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpredicted\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'val'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test Accuracy: {:.2f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_state\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'val_acc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredicted\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"AddToPlaylist\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"BookRestaurant\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"GetWeather\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"PlayMusic\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"RateBook\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"SearchCreativeWork\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"SearchScreeningEvent\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(0)\n",
+    "predicted, true = evaluate(params, classifier, train_state, 'val')\n",
+    "print(\"Test Accuracy: {:.2f}\".format(train_state['val_acc']))\n",
+    "print(pd.DataFrame(confusion_matrix(predicted, true), index=[\"AddToPlaylist\", \"BookRestaurant\", \"GetWeather\", \"PlayMusic\", \"RateBook\", \"SearchCreativeWork\", \"SearchScreeningEvent\"]))"
    ]
   },
   {
@@ -666,8 +824,131 @@
     "        prediction_vector = self.fc2(intermediate_vector)\n",
     "\n",
     "        if apply_softmax:\n",
-    "            prediction_vector = F.softmax(prediction_vector,dim=1)\n",
+    "            prediction_vector = F.softmax(prediction_vector,dim=1)intent_data.to_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv', index=False)\n",
     "        return prediction_vector\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing\n",
+    "The utterances in our data (training, validation and test) are represented as sequences of whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we make changes to the data we should create a backup of the unaltered file in case we need to revert to it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp /content/gdrive/My\\ Drive/Intent_Classification/intent_classification_with_splits.csv ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we need to revert to the original unaltered file, we can then run the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cp intent_classification_with_splits.csv /content/gdrive/My\\ Drive/Intent_Classification/\n",
+    "intent_data=pd.read_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The preprocessing steps that we are going to apply will be specified in a function called preprocess_utterance.\n",
+    "\n",
+    "If you want to apply the Porter Stemmer, you should run the following code cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "porter = nltk.PorterStemmer()\n",
+    "def preprocess_utterance(utt):\n",
+    "  utterance = nltk.word_tokenize(utt)\n",
+    "  newutt = \"\"\n",
+    "  for t in utterance:\n",
+    "    newutt = newutt + porter.stem(t) + \" \"\n",
+    "  return newutt.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to apply the WordNetLemmatizer you should instead run the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wnl = nltk.WordNetLemmatizer()\n",
+    "def preprocess_utterance(utt):\n",
+    "  utterance = nltk.word_tokenize(utt)\n",
+    "  newutt = \"\"\n",
+    "  for t in utterance:\n",
+    "    newutt = newutt + wnl.lemmatize(t) + \" \"\n",
+    "  return newutt.rstrip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can check that your preprocessing is doing what you want by testing them on examples using the following cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = input(\"Enter a utterance to test your preprocessing on: \")\n",
+    "print(preprocess_utterance(test_input))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you are happy with your preprocessing you can then transform the text in the training, validation and test data using the following cell. This alters the data on the disk so if you want to undo any changes later you will have to revert to the original data (as described above).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intent_data['text'] = [preprocess_utterance(item) for item in intent_data['text']]\n",
+    "intent_data.to_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv', index=False)\n"
    ]
   },
   {
