--- a/LELA70331_Coursework.ipynb
+++ b/LELA70331_Coursework.ipynb
@@ -571,7 +571,7 @@
    "metadata": {},
    "source": [
     "### Preprocessing\n",
-    "The utterances in our data (training, validation and test) are represented as sequences of whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
+    "The utterances in our data (training, validation and test) are whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
     "\n"
    ]
   },
@@ -831,7 +831,7 @@
     "        prediction_vector = self.fc2(intermediate_vector)\n",
     "\n",
     "        if apply_softmax:\n",
-    "            prediction_vector = F.softmax(prediction_vector,dim=1)intent_data.to_csv('/content/gdrive/My Drive/Intent_Classification/intent_classification_with_splits.csv', index=False)\n",
+    "            prediction_vector = F.softmax(prediction_vector,dim=1)\n",
     "        return prediction_vector\n"
    ]
   },
@@ -840,7 +840,7 @@
    "metadata": {},
    "source": [
     "### Preprocessing\n",
-    "The utterances in our data (training, validation and test) are represented as sequences of whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
+    "The utterances in our data (training, validation and test) are whole words. This means that morphological variants are considered to be completely unrelated entities (e.g. the system doesn't know that run, ran and running are related in any way). To increase the generalisation of your system you can preprocess the text to, for example, convert morphological variants to a single \"lemma\". We discussed methods for doing this earlier in the semester and saw a few tools that are built into NLTK in week 3, such as the PorterStemmer or the WordNetLemmatizer. \n",
     "\n"
    ]
   },
