--- a/Week_8_Seminar.ipynb
+++ b/Week_8_Seminar.ipynb
@@ -131,7 +131,7 @@
     "s2='das_ART haus_N ist_AUX ja_ADV groß_ADJ '\n",
     "t2='the house is big '\n",
     "s3='ja_ADV das_ART buch_N ist_AUX klein_ADJ'\n",
-    "t3='the book is small '\n",
+    "t3='yes the book is small '\n",
     "s4='das_ART haus_N'\n",
     "t4='the house '\n",
     "s5='ein_ART buch_N'\n",
@@ -669,19 +669,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "language_prob = defaultdict(lambda: -99.0)\n",
-    "language_prob[\"the house is small\"] = math.log(0.9999999)\n",
-    "language_prob[\"the house is big\"] = math.log(0.9999999)\n",
-    "language_model = type('',(object,),{'probability_change': lambda self, context, phrase: language_prob[phrase], 'probability': lambda self, phrase: language_prob[phrase]})()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -862,6 +849,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "def assign_intent(utt):\n",
     "  random.seed(10)\n",
     "  PlayMusic_Pattern = re.compile(\"play|music\")\n",
@@ -919,7 +907,6 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "import re\n",
     "def assign_intent(utt):\n",
     "  random.seed(10)\n",
     "  PlayMusic_Pattern = re.compile(\"play|music\")\n",
