--- a/LELA32051_Coursework.ipynb
+++ b/LELA32051_Coursework.ipynb
@@ -478,7 +478,7 @@
     "id": "xajHmMX33-oC"
    },
    "source": [
-    "Running the next cell will give you a \"confusion matrix\". This tells you the number of times that each intent as given in the rows is misclassified as each intent as represented by the columns. The columns are displayed as numbers but you can check which each of these numbers stands for by looking into the parentheses after each intent in the rows.\n",
+    "Running the next cell will give you a \"confusion matrix\". This tells you the number of times that each intent as given in the rows is classified (correctly or otherwise) as each intent as represented by the columns. The columns are displayed as numbers but you can check which each of these numbers stands for by looking into the parentheses after each intent in the rows.\n",
     "\n",
     "Studying this will give you an idea of where the classifier might be going wrong, and therefore of how you might update your patterns."
    ]
@@ -1125,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
