--- a/Week_9_Seminar.ipynb
+++ b/Week_9_Seminar.ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "brown.tagged_words()"
+    "brown.tagged_words()[1:25]"
    ]
   },
   {
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "brown.tagged_words(tagset=\"universal\")"
+    "brown.tagged_words(tagset=\"universal\")[1:25]"
    ]
   },
   {
@@ -90,7 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "nltk.corpus.indian.tagged_words() # Hindi"
+    "nltk.corpus.indian.tagged_words() # Bangla, Hindi, Marathi, and Telugu language data"
    ]
   },
   {
@@ -399,7 +399,7 @@
    },
    "outputs": [],
    "source": [
-    "for tagged_sent in brown.tagged_sents(categories=\"news\"):\n",
+    "for tagged_sent in brown.tagged_sents(categories=\"news\")[1:75]:\n",
     "    for (w1,t1), (w2,t2), (w3,t3) in nltk.trigrams(tagged_sent):\n",
     "        if (t1.startswith('V') and w2 == 'to' and t3.startswith('V')):\n",
     "            print(w1, w2, w3)"
